chore: update with suggestions